--- a/style.css
+++ b/style.css
@@ -247,7 +247,7 @@ button {
         font-size: 10px;
     }
     .backs {
-        background-image: url('assets/me-mobile.jpg');
+        background-image: url('assets/me-mobile.jpg') !important;
         background-repeat: no-repeat;
         background-size: cover;
         background-position: center;
